--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generate": "node src/scripts/generateProducts.js"
+    "generate": "node src/scripts/generateProducts.js",
+    "add-one": "node src/scripts/addOneProduct.js"
   },
   "keywords": [],
   "author": "",
