--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "node src/scripts/generateProducts.js",
-    "add-one": "node src/scripts/addOneProduct.js"
+    "add-one": "node src/scripts/addOneProduct.js",
+    "get-all": "node src/scripts/getAllProducts.js"
   },
   "keywords": [],
   "author": "",
