--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "node src/scripts/generateProducts.js",
     "add-one": "node src/scripts/addOneProduct.js",
-    "get-all": "node src/scripts/getAllProducts.js"
+    "get-all": "node src/scripts/getAllProducts.js",
+    "count": "node src/scripts/countProducts.js"
   },
   "keywords": [],
   "author": "",
