--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "node src/scripts/generateProducts.js",
     "add-one": "node src/scripts/addOneProduct.js",
     "get-all": "node src/scripts/getAllProducts.js",
-    "count": "node src/scripts/countProducts.js"
+    "count": "node src/scripts/countProducts.js",
+    "clear": "node src/scripts/clearProducts.js"
   },
   "keywords": [],
   "author": "",
