--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "add-one": "node src/scripts/addOneProduct.js",
     "get-all": "node src/scripts/getAllProducts.js",
     "count": "node src/scripts/countProducts.js",
-    "clear": "node src/scripts/clearProducts.js"
+    "clear": "node src/scripts/clearProducts.js",
+    "remove-random": "node src/scripts/removeRandomProduct.js"
   },
   "keywords": [],
   "author": "",
